maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:52: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
    setIndication(0,nextCase(0))
                 ^